# BE

./: .gitignore  Dockerfile  LOG_SETUP.md  README.md  docker-compose.yml  pyproject.toml
Admin-FE/: jsconfig.json  package.json
Admin-FE/app/: globals.css  layout.jsx  page.jsx
Admin-FE/components/: AppSidebar.jsx  DataCard.jsx  PageHeader.jsx  RequireAuth.jsx  Section.jsx  SimpleTable.jsx  ToggleField.jsx
Admin-FE/contexts/: AuthContext.jsx
Admin-FE/hooks/: useDashboardSummary.js  useDetectionSettings.js  useLogs.js  useProjects.js  useSystemSettings.js
alembic/versions/: 69fbcf25f047_create_detection_rules_table.py  73ce6740a75c_create_detection_rules_table.py  b5c24e9f3f21_add_projects_and_settings_tables.py
app/: main.py
app/ai/: model_manager.py
app/core/: config.py  dependencies.py
app/models/: detection_rule.py  label_policy.py  project.py  system_setting.py
app/repositories/: detection_rule_repository.py  label_policy_repository.py  log_repository.py  project_repository.py  system_setting_repository.py  user_repo.py
app/repository/: log_repository.py
app/schemas/: dashboard.py  detection_rule.py  detection_settings.py  log.py  metrics.py  project.py  system_settings.py
app/services/: detection_rule_service.py  detection_settings_service.py  log_service.py  pii_service.py  project_service.py  system_settings_service.py
app/usecases/: dashboard_usecases.py  detection_rule_usecases.py  detection_settings_usecases.py  log_usecases.py  metrics_usecases.py  project_usecases.py  (+1 more)
docs/: GEMINI.md  develop_log.md  git_branch_sync.md
(+23 files in other folders)
