[project]
name = "ai-tls-dlp-be"
version = "1.0.0"
description = "AI-based PII Detection Backend using Regex and BERT NER"
requires-python = ">=3.13"
dependencies = [
    # Web Framework
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "greenlet>=3.0.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",

    # AI/ML Models (PII Detection only)
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.3",

    # Utils
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
]
